--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -17,6 +17,11 @@ a.brand-link {
     cursor: pointer
 }
 
+a.black {
+    color: black;
+    text-decoration: none;
+}
+
 .row {
     padding-top: 15px
 }
