--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -17,6 +17,12 @@ a.brand-link {
     cursor: pointer
 }
 
+.page-header {
+  padding-bottom: 9px;
+  margin: 0 0 25px;
+  border-bottom: 1px solid #eee;
+}
+
 a.black {
     color: black;
     text-decoration: none;
